--- a/blog/views/rodape.ejs
+++ b/blog/views/rodape.ejs
@@ -1,5 +1,5 @@
     <div class="container">
-        <footer><small>Copyright Marcelo Silva by Marcos Kutova PUC 2017</small><footer>
+        <footer><small>Copyright <strong>Marcelo Silva</strong> by Marcos Kutova PUC 2017</small><footer>
     </div>
 </body>
 </html>
