--- a/blog/views/menu.ejs
+++ b/blog/views/menu.ejs
@@ -11,7 +11,12 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="/login">Login</a></li>
+            <li class="navbar-text"><%= usuario.nome %></li>
+            <% if (usuario.nome == '') { %>
+                <li><a href="/login">Login</a></li>
+            <% } else { %>
+                <li><a href="/logout">Logout</a></li>            
+            <% } %>
         </ul>
     </div>
 </nav>
